--- a/dz1/playbook.yml
+++ b/dz1/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install nginx
   become: true
-  hosts: nginx
+  hosts: all
   tasks:
     - name: Install nginx
       ansible.builtin.apt:
