--- a/dz2/inventory.ini
+++ b/dz2/inventory.ini
@@ -3,11 +3,12 @@ ansible_user=centos
 ansible_ssh_private_key_file=id_rsa
 
 [server]
-84.201.132.5
+51.250.11.59
 
 [clients]
-192.168.0.32
+node1.ru-central1.internal
 
 [clients:vars]
-ansible_ssh_common_args='-oProxyCommand="ssh -W %h:%p -q -i id_rsa centos@84.201.132.5" -i id_rsa'
+ansible_ssh_common_args='-oProxyCommand="ssh -W %h:%p -q -i id_rsa centos@51.250.11.59" -i id_rsa'
 clients='node1.ru-central1.internal'
+server=51.250.11.59
