--- a/dz2/playbook.yml
+++ b/dz2/playbook.yml
@@ -32,6 +32,8 @@
           - pcs
           - fence-agents-all
           - iscsi-initiator-utils
+          - lvm2-cluster
+          - gfs2-utils
     - name: Start pacemaker
       ansible.builtin.systemd:
         name: pcsd
@@ -74,3 +76,48 @@
 
     - name: Login to target
       command: iscsiadm -m node -l -T iqn.2018-09.ru.otus:storage.target00
+
+    - name: Stop stonith
+      command: pcs property set stonith-enabled=false
+
+    - name: Create DLM resource
+      command: pcs resource create dlm systemd:dlm op monitor interval=30s on-fail=ignore clone interleave=true ordered=true
+      ignore_errors: true
+
+    - command: pcs resource create clvmd ocf:heartbeat:clvm op monitor interval=30s on-fail=ignore clone interleave=true ordered=true
+      ignore_errors: true
+
+    - command: pcs constraint order start dlm-clone then clvmd-clone
+      ignore_errors: true
+
+    - name: Create volume group
+      ansible.builtin.lvg:
+        vg: cluster_vg
+        vg_options: -Ay -cy
+        pvs: /dev/sda
+        state: present
+
+    - name: Create logical volume
+      ansible.builtin.lvol:
+        lv: cluster_lv
+        vg: cluster_vg
+        resizefs: true
+        size: +100%FREE
+        active: true
+        state: present
+
+    - name: Format filesystem
+      command: mkfs.gfs2 -O -j3 -p lock_dlm -t otuscluster:gfs2 /dev/cluster_vg/cluster_lv
+      ignore_errors: true
+
+    - name: Mount filesystem
+      command: pcs resource create clusterfs ocf:heartbeat:Filesystem device="/dev/cluster_vg/cluster_lv" directory="/mnt/gfs2" fstype="gfs2" "options=noatime" op monitor interval=10s on-fail=ignore clone interleave=true
+      ignore_errors: true
+
+    - name: Add order constraint
+      command: pcs constraint order start clvmd-clone then clusterfs-clone
+      ignore_errors: true
+
+    - name: Add colocation constraint
+      command: pcs constraint colocation add clusterfs-clone with clvmd-clone
+      ignore_errors: true
