--- a/dz2/inventory.ini
+++ b/dz2/inventory.ini
@@ -4,8 +4,11 @@ ansible_ssh_private_key_file=id_rsa
 target=iqn.2018-09.ru.otus:storage.target00
 pacemaker=otuscluster
 
+[admin]
+node1.ru-central1.internal
+
 [server]
-62.84.118.220
+84.201.135.215
 
 [clients]
 node1.ru-central1.internal
@@ -13,6 +16,6 @@ node2.ru-central1.internal
 node3.ru-central1.internal
 
 [clients:vars]
-ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@62.84.118.220" -i id_rsa -o StrictHostKeyChecking=accept-new'
+ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@84.201.135.215" -i id_rsa -o StrictHostKeyChecking=accept-new'
 clients='node1.ru-central1.internal node2.ru-central1.internal node3.ru-central1.internal'
-server=62.84.118.220
+server=84.201.135.215
