--- a/dz2/inventory.ini
+++ b/dz2/inventory.ini
@@ -17,3 +17,9 @@ server.ru-central1.internal
 node1.ru-central1.internal
 node2.ru-central1.internal
 node3.ru-central1.internal
+
+[src]
+node1.ru-central1.internal
+
+[dst]
+node2.ru-central1.internal
