--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -1,31 +1,23 @@
 ---
 - hosts: nginx
+- hosts: db
   become: true
   gather_facts: no
   tasks:
-    - name: install keepalived
+    - ansible.builtin.yum:
+        name: 
+          - https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+          - https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm
+    - name: install postgresql
       ansible.builtin.yum:
-        update_cache: yes
-        name:
-          - keepalived
-    - name: sysctl
-      ansible.posix.sysctl:
-        name: net.ipv4.ip_nonlocal_bind
-        value: '1'
-        state: present
-    - ansible.builtin.copy:
-        dest: /etc/keepalived/keepalived.conf
-        content: |
-          vrrp_instance VI_1 {
-            state {{ keepalived_state }}
-            interface eth0
-            virtual_router_id 51
-            priority 100
-            virtual_ipaddress {
-              10.0.26.80
-            }
-          }
-    - ansible.builtin.systemd:
-        name: keepalived
+        name: postgresql15-server
+    - ansible.builtin.file:
+        path: /var/lib/pgsql/15/data/
+        state: absent
+    - name: initdb
+      command: /usr/pgsql-15/bin/postgresql-15-setup initdb
+    - name: start postgresql
+      ansible.builtin.systemd:
+        name: postgresql-15
         state: started
         enabled: yes
