--- a/dz3/inventory.ini
+++ b/dz3/inventory.ini
@@ -1,15 +1,26 @@
 [all:vars]
 ansible_user=centos
 ansible_ssh_private_key_file=id_rsa
-ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@62.84.115.89" -i id_rsa -o StrictHostKeyChecking=accept-new'
+ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@158.160.109.232" -i id_rsa -o StrictHostKeyChecking=accept-new'
+
+[db]
+db.ru-central1.internal
+
+[db:vars]
+app_role=app
+app_password=app_password
+app_database=app_database
+
+[backend]
+; backend-1.ru-central1.internal
+; backend-2.ru-central1.internal
+db.ru-central1.internal
+
+[backend:vars]
+conn_str=postgres://app:app_password@db.ru-central1.internal:5432/app_database
+http_port=8080
+static_dir=/var/run/app/static
 
 [nginx]
 nginx-1.ru-central1.internal keepalived_state=MASTER
 nginx-2.ru-central1.internal keepalived_state=BACKUP
-
-[backend]
-backend-1.ru-central1.internal
-backend-2.ru-central1.internal
-
-[db]
-db.ru-central1.internal
