--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -38,8 +38,17 @@
 
 - hosts: db
   become: yes
-  vars_files:
-    - vars/main.yml
+  vars:
+    mysql_root_password: super-secure-password
+    mysql_databases:
+      - name: "{{WORDPRESS_DB_NAME}}"
+        encoding: latin1
+        collation: latin1_general_ci
+    mysql_users:
+      - name: "{{WORDPRESS_DB_USER}}"
+        host: "%"
+        password: "{{WORDPRESS_DB_PASSWORD}}"
+        priv: "wordpress_db.*:ALL"
   roles:
     - geerlingguy.mysql
 
