--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -96,3 +96,10 @@
         name: nginx
         state: started
         enabled: yes
+
+- hosts: bastion
+  gather_facts: no
+  tasks:
+    - name: check load balancer
+      ansible.builtin.uri:
+        url: http://192.168.0.10
